--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div id="div_flash_message" class="container" >
+			<%= render :partial=>"/layouts/common/flash_messages" -%>
+		</div>
 <%= yield %>
 
 </body>
