--- a/app/views/terms_semister/edit.html.erb
+++ b/app/views/terms_semister/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="well" style="width: 100%;margin-top: 100px;height: auto;">
-    <h3>Create Terms/Semister Form</h3>
+    <h3>Edit Terms/Semister Form</h3>
     <br>
-    <%= form_for :terms_semister, url: terms_semister_index_path do |f| %>
+    <%= form_for :terms_semister, url: terms_semister_path, :method=> :put do |f| %>
       <% if @terms_semister.errors.any? %>
         <div id="error_explanation">
           <h4><%= pluralize(@terms_semister.errors.count, "error") %> prohibited this user from being saved:</h4>
@@ -62,7 +62,7 @@
         <div class="row" style="margin-left: 80px;">
           <div class="col-xs-6">
             <div class="form-group">
-              <%= f.submit "Save", :class=>"btn btn-primary"  %>
+              <%= f.submit "Update", :class=>"btn btn-primary"  %>
             </div>
           </div>
           <div class="col-xs-6">
