--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -40,3 +40,39 @@
  textarea {
     resize: none;
 }
+.navbar {
+    margin-bottom: 0px;
+}
+.navbar-fixed-top {
+    border-bottom: 1px solid #646464;
+    background-color: #428bca;
+}
+.navbar-nav > li > a {
+    font-size: 16px; font-family: "Titillium Web"; color: rgb( 34, 34, 34 ); text-transform: uppercase; line-height: 1.125;
+    padding-bottom: 5px;padding-top: 5px;padding-left: 2px;padding-right: 2px;margin: 30px 25px 30px 25px;
+
+}
+.navbar-nav > li > a:hover {
+    background-color: transparent; text-decoration: none;  border-bottom: 3px solid white;margin: 30px 25px 25px 25px;
+}
+.navbar-nav > .active > a {
+    border-bottom: 3px solid white;margin: 30px 25px 25px 25px;
+}
+.btn {
+    text-transform: uppercase;
+    font-family: "Roboto";
+    border-radius: 3px;
+}
+.navbar-toggle {
+    background-color:#ea6060;border: 1px solid #ea6060;
+}
+.navbar-toggle .icon-bar {
+    background-color: #fff;
+}
+a:focus {
+    outline: none;
+}
+.shared_links{
+  color: white;
+  text-decoration: none;
+}
