--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<%= render :partial => "layouts/common/header" %>
 <div id="div_flash_message" class="container" >
-			<%= render :partial=>"/layouts/common/flash_messages" -%>
+			<%= render :partial=>"layouts/common/flash_messages" -%>
 		</div>
 <%= yield %>
 
