fixed assets compile issue

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -35,7 +35,7 @@
 
 .field_with_errors {
   @extend .control-group !optional;
-  @extend .error;
+  @extend .error !optional;
  }
  textarea {
     resize: none;
