--- a/app/views/schools/new.html.erb
+++ b/app/views/schools/new.html.erb
@@ -3,7 +3,18 @@
   <div>
     <a href="<%= schools_path %>" class='btn btn-normal btn-position-style'>Back</a>
   </div>
-    <%= form_for :school, url: schools_path do |f| %>
+
+    <%= form_for :school, url: schools_path, :method=> :post do |f| %>
+    <% if @school.errors.any? %>
+      <div id="error_explanation">
+        <h4><%= pluralize(@school.errors.count, "error") %> prohibited this user from being saved:</h4>
+        <ul>
+          <% @school.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
     <div class="row">
 
       <div class="col-sm-12">
