--- a/app/views/grading_levels/edit.html.erb
+++ b/app/views/grading_levels/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container padding-issue-in-new">
   <div class="well" style="width: 100%;margin-top: 100px;height: auto;">
     <h3>Edit Grading Level Form</h3>
     <br>
