--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,7 +1,7 @@
-<div id="content" class="container body-img">
+<div id="content" class="container body-img fix-width-header">
 <h2 class='heading-fix'> List of School</h2>
 <div>
-  <a href="<%= new_school_path %>" class='btn btn-normal btn-position-style'>Create School</a>
+  <a href="<%= new_school_path %>" class='btn btn-normal create-btn-position'>Create School</a>
 </div>
 
 <div class="table-responsive list-view div-documents-list-section fix-position-table">
