--- a/app/views/terms_semister/index.html.erb
+++ b/app/views/terms_semister/index.html.erb
@@ -1,5 +1,5 @@
-<div id="content" class="container body-img">
-  <h2 class='heading-fix'> List of Terms/Semister</h2>
+<div id="content" class="container body-img fix-width-header">
+  <h2 class='heading-fix'> List of Terms</h2>
 <div>
   <%= link_to "Create Terms/Semister", new_terms_semister_path, :class=>"btn btn-primary", :style=>"float :right;" %>
 </div>
