--- a/app/views/grading_levels/index.html.erb
+++ b/app/views/grading_levels/index.html.erb
@@ -1,4 +1,4 @@
-<div id="content" class="container body-img">
+<div id="content" class="container body-img fix-width-header">
   <h2 class='heading-fix'> List of Grade Levels</h2>
 <div>
   <%= link_to "Create Grade Level", new_grading_level_path, :class=>"btn btn-primary", :style=>"float :right;" %>
