fixed all the ui issues.

--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -1,4 +1,4 @@
-<div id="content" class="container body-img">
+<div id="content" class="container body-img fix-width-header">
   <h2 class='heading-fix'> List of Batches</h2>
 <div>
   <%= link_to "Create Batch", new_batch_path, :class=>"btn btn-primary", :style=>"float :right;" %>
