--- a/app/views/schools/show.html.erb
+++ b/app/views/schools/show.html.erb
@@ -1,7 +1,7 @@
-<div id="content" class="container body-img">
+<div id="content" class="container body-img fix-width-header">
   <h2 class='heading-fix'>School</h2>
   <div>
-    <a href="<%= schools_path %>" class='btn btn-normal btn-position-style'>Back</a>
+    <a href="<%= schools_path %>" class='btn btn-normal create-btn-position'>Back</a>
   </div>
 <ul class="fix-distance-show-school">
   <li><b>Name:</b> <%= @school.name %></li></br>
