--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,4 +1,4 @@
-<div id="content" class="container body-img">
+<div id="content" class="container body-img fix-width-header">
   <h2 class='heading-fix'> List of Subjects</h2>
 <div>
   <%= link_to "Create Subject", new_subject_path, :class=>"btn btn-primary", :style=>"float :right;" %>
