--- a/app/views/batches/new.html.erb
+++ b/app/views/batches/new.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container padding-issue-in-new">
   <div class="well" style="width: 100%;margin-top: 100px;height: auto;">
-    <h3>Create Batch Form</h3>
+    <h3 class='align-center-text'>Create Batch</h3>
     <br>
     <%= form_for :batch, url: batches_path do |f| %>
       <% if @batch.errors.any? %>
@@ -8,57 +8,62 @@
           <h4><%= pluralize(@batch.errors.count, "error") %> prohibited this user from being saved:</h4>
           <ul>
             <% @batch.errors.full_messages.each do |msg| %>
-              <li><%= msg %></li>
+            <li><%= msg %></li>
             <% end %>
           </ul>
         </div>
       <% end %>
-      <div class="row">
-        <div class="form-group">
-            <div class="col-sm-12">
-              <%= f.label :name %>
-              <%= f.text_field :name, class: 'form-control' %>
-            </div>
-        </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="form-group">
-            <div class="col-sm-12">
-              <%= f.label :code %>
-              <%= f.text_field :code, class: 'form-control' %>
-            </div>
-        </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="form-group">
-          <div class="col-sm-12">
-            <%= f.label :start_date %>
-            <%= f.date_field :start_date, class: 'form-control' %>
-          </div>
-        </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="form-group">
-          <div class="col-sm-12">
-            <%= f.label :end_date %>
-            <%= f.date_field :end_date, class: 'form-control' %>
-          </div>
-        </div>
-      </div>
-      <br>
-      <div class="container-fluid">
-        <div class="row" style="margin-left: 80px;">
-          <div class="col-xs-6">
+
+      <div class='row fix-input-filed-center'>
+        <div class="col-sm-8 col-xs-12">
+          <div class="row">
             <div class="form-group">
-              <%= f.submit "Save", :class=>"btn btn-primary"  %>
+              <div class="col-sm-12">
+                <%= f.label :name %>
+                <%= f.text_field :name, class: 'form-control' %>
+              </div>
             </div>
           </div>
-          <div class="col-xs-6">
+          <br>
+          <div class="row">
             <div class="form-group">
-              <%= link_to "Cancel", batches_path, :class=>"btn btn-danger" %>
+              <div class="col-sm-12">
+                <%= f.label :code %>
+                <%= f.text_field :code, class: 'form-control' %>
+              </div>
+            </div>
+          </div>
+          <br>
+          <div class="row">
+            <div class="form-group">
+              <div class="col-sm-12">
+                <%= f.label :start_date %>
+                <%= f.date_field :start_date, class: 'form-control' %>
+              </div>
+            </div>
+          </div>
+          <br>
+          <div class="row">
+            <div class="form-group">
+              <div class="col-sm-12">
+                <%= f.label :end_date %>
+                <%= f.date_field :end_date, class: 'form-control' %>
+              </div>
+            </div>
+          </div>
+          <br>
+          <div class="container-fluid">
+            <div class="row" style="margin-left: 80px;">
+              <div class="col-xs-6">
+                <div class="form-group">
+                  <%= f.submit "Save", :class=>"btn btn-primary"  %>
+                </div>
+              </div>
+              <div class="col-xs-6">
+                <div class="form-group">
+                  <%= link_to "Cancel", batches_path, :class=>"btn btn-danger" %>
+                </div>
+              </div>
             </div>
           </div>
         </div>
