--- a/app/views/grading_levels/new.html.erb
+++ b/app/views/grading_levels/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container padding-issue-in-new">
   <div class="well" style="width: 100%;margin-top: 100px;height: auto;">
-    <h3 class='align-center-text'>Create Grading Level Form</h3>
+    <h3 class='align-center-text'>Create Grading Level</h3>
     <br>
     <%= form_for :grading_level, url: grading_levels_path do |f| %>
       <% if @grading_level.errors.any? %>
