--- a/app/views/schools/edit.html.erb
+++ b/app/views/schools/edit.html.erb
@@ -1,8 +1,5 @@
-<div id="content" class="container body-img">
+<div id="content" class="container body-img fix-width-header">
   <h2 class='heading-fix'> Edit School</h2>
-  <div>
-    <a href="<%= schools_path %>" class='btn btn-normal btn-position-style'>Back</a>
-  </div>
 
     <%= form_for :school, url: school_path, :method=> :put do |f| %>
     <% if @school.errors.any? %>
@@ -17,76 +14,87 @@
     <% end %>
     <div class="row">
 
-      <div class="col-sm-12">
+      <div class="col-sm-6">
 
-        <div class="form-group">
-          <div class="col-sm-6">
-            <%= f.label :name %>
-            <%= f.text_field :name, class: 'form-control' %>
+        <div class="row">
+          <div class="form-group">
+            <div class="col-sm-10">
+              <%= f.label :name %>
+              <%= f.text_field :name, class: 'form-control' %>
+            </div>
           </div>
-        </div>
+        </div></br>
 
-        <div class="form-group">
-          <div class="col-sm-6">
-            <%= f.label :address %>
-            <%= f.text_field :address, class: 'form-control' %>
+        <div class="row">
+          <div class="form-group">
+            <div class="col-sm-10">
+              <%= f.label :address %>
+              <%= f.text_field :address, class: 'form-control' %>
+            </div>
           </div>
-        </div>
+        </div></br>
 
-      </div>
+      <!-- </div> -->
 
-      <div class="col-sm-12">
-
-        <div class="form-group">
-          <div class="col-sm-6">
-            <%= f.label :email %>
-            <%= f.text_field :email, class: 'form-control' %>
+      <!-- <div class="col-sm-12"> -->
+        <div class="row">
+          <div class="form-group">
+            <div class="col-sm-10">
+              <%= f.label :email %>
+              <%= f.text_field :email, class: 'form-control' %>
+            </div>
           </div>
-        </div>
+        </div></br>
 
-        <div class="form-group">
-          <div class="col-sm-6">
-            <%= f.label :telephone %>
-            <%= f.text_field :telephone, class: 'form-control' %>
-          </div>
-        </div>
-
-      </div>
-
-    </div>
-
-    <div class="row">
-      <div class="col-sm-12">
-
-        <div class="form-group">
-          <div class="col-sm-6">
-            <%= f.label :city %>
-            <%= f.text_field :city, class: 'form-control' %>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <div class="col-sm-6">
-            <%= f.label :county %>
-            <%= f.text_field :country, class: 'form-control' %>
+        <div class="row">
+          <div class="form-group">
+            <div class="col-sm-10">
+              <%= f.label :telephone %>
+              <%= f.text_field :telephone, class: 'form-control' %>
+            </div>
           </div>
         </div>
 
       </div>
 
-      <div class="col-sm-12">
+      <div class="col-sm-6">
 
-        <div class="form-group">
-          <div class="col-sm-6">
-            <%= f.label :region %>
-            <%= f.text_field :region, class: 'form-control' %>
+        <div class="row">
+          <div class="form-group">
+            <div class="col-sm-10">
+              <%= f.label :city %>
+              <%= f.text_field :city, class: 'form-control' %>
+            </div>
           </div>
-        </div>
+        </div></br>
 
-        <div class="form-group">
-          <div class="col-sm-6">
-            <%= f.label :currency_type %>
-            <%= f.text_field :currency_type, class: 'form-control' %>
+        <div class="row">
+          <div class="form-group">
+            <div class="col-sm-10">
+              <%= f.label :county %>
+              <%= f.text_field :country, class: 'form-control' %>
+            </div>
+          </div>
+        </div></br>
+
+      <!-- </div> -->
+
+      <!-- <div class="col-sm-12"> -->
+        <div class="row">
+          <div class="form-group">
+            <div class="col-sm-10">
+              <%= f.label :region %>
+              <%= f.text_field :region, class: 'form-control' %>
+            </div>
+          </div>
+        </div></br>
+
+        <div class="row">
+          <div class="form-group">
+            <div class="col-sm-10">
+              <%= f.label :currency_type %>
+              <%= f.text_field :currency_type, class: 'form-control' %>
+            </div>
           </div>
         </div>
 
@@ -95,6 +103,9 @@
 
   <div>
     <%= f.submit 'Update', class: 'btn btn-normal btn-primary fix-save-btn' %>
+  </div></br>
+  <div>
+    <a href="<%= schools_path %>" class='btn btn-normal btn-position-style'>Back</a>
   </div>
   <% end %>
 </div>
