home page static UI

--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,9 +1,9 @@
-<div class="row home-page-spacing">
+<div class="row" style="background-color:red; margin-top:90px; min-height:60px;">
   <div class="col-md-12">
   </div>
 </div>
 
-<div class="row home-page-spacing">
+<div class="row" style="margin-top:100px; min-height:60px;">
   <div class="col-md-1">
   </div>
   <div class="col-md-2 text-center">
@@ -31,7 +31,7 @@
     <br/>
     Examinations
   </div>
-  <div class="col-md-1 home-page-spacing">
+  <div class="col-md-1" style="margin-top:100px; min-height:60px;">
   </div>
 </div>
 
