--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require bootstrap
  *= require bootstrap.min
  *= require custom
+ *= require font-awesome
  *= require_tree .
  *= require_self
  */
