--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,29 +7,34 @@
   <div class="col-md-1">
   </div>
   <div class="col-md-2 text-center">
-    <a href=""><i class="fa fa-user-plus fa-5x" aria-hidden="true"></i></a>
-    <br/>
-    Admission
+    <a href="" class="style_prevu_kit"><i class="fa fa-user-plus fa-5x" aria-hidden="true"></i>
+      <br/>
+      Admission
+    </a>
   </div>
   <div class="col-md-2 text-center">
-    <a href=""><i class="fa fa-users fa-5x" aria-hidden="true"></i></a>
-    <br/>
-    Student Details
+    <a href="" class="style_prevu_kit"><i class="fa fa-users fa-5x" aria-hidden="true"></i>
+      <br/>
+      Student Details
+    </a>
   </div>
   <div class="col-md-2 text-center">
-    <a href=""><i class="fa fa-files-o fa-5x" aria-hidden="true"></i></a>
-    <br/>
-    Manage User
+    <a href="" class="style_prevu_kit"><i class="fa fa-files-o fa-5x" aria-hidden="true"></i>
+      <br/>
+      Manage User
+    </a>
   </div>
   <div class="col-md-2 text-center">
-    <a href=""><i class="fa fa-newspaper-o fa-5x" aria-hidden="true"></i></a>
-    <br/>
-    Manage News
+    <a href="" class="style_prevu_kit"><i class="fa fa-newspaper-o fa-5x" aria-hidden="true"></i>
+      <br/>
+      Manage News
+    </a>
   </div>
   <div class="col-md-2 text-center">
-    <a href=""><i class="fa fa-bar-chart fa-5x" aria-hidden="true"></i></a>
-    <br/>
-    Examinations
+    <a href="" class="style_prevu_kit"><i class="fa fa-bar-chart fa-5x" aria-hidden="true"></i>
+      <br/>
+      Examinations
+    </a>
   </div>
   <div class="col-md-1 home-page-spacing">
   </div>
@@ -39,29 +44,34 @@
   <div class="col-md-1">
   </div>
   <div class="col-md-2 text-center">
-    <a href=""><i class="fa fa-calendar fa-5x" aria-hidden="true"></i></a>
-    <br/>
-    Time Table
+    <a href="" class="style_prevu_kit"><i class="fa fa-calendar fa-5x" aria-hidden="true"></i>
+      <br/>
+      Time Table
+    </a>
   </div>
   <div class="col-md-2 text-center">
-    <a href=""><i class="fa fa-hand-o-up fa-5x" aria-hidden="true"></i></a>
-    <br/>
-    Attendance
+    <a href="" class="style_prevu_kit"><i class="fa fa-hand-o-up fa-5x" aria-hidden="true"></i>
+      <br/>
+      Attendance
+    </a>
   </div>
   <div class="col-md-2 text-center">
-    <a href=""><i class="fa fa-cogs fa-5x" aria-hidden="true"></i></a>
-    <br/>
-    Settings
+    <a href="" class="style_prevu_kit"><i class="fa fa-cogs fa-5x" aria-hidden="true"></i>
+      <br/>
+      Settings
+    </a>
   </div>
   <div class="col-md-2 text-center">
-    <a href=""><i class="fa fa-cutlery fa-5x" aria-hidden="true"></i></a>
-    <br/>
-    Canteen
+    <a href="" class="style_prevu_kit"><i class="fa fa-cutlery fa-5x" aria-hidden="true"></i>
+      <br/>
+      Canteen
+    </a>
   </div>
   <div class="col-md-2 text-center">
-    <a href=""><i class="fa fa-user fa-5x" aria-hidden="true"></i></a>
-    <br/>
-    Human Resource
+    <a href="" class="style_prevu_kit"><i class="fa fa-user fa-5x" aria-hidden="true"></i>
+      <br/>
+      Human Resource
+    </a>
   </div>
   <div class="col-md-1">
   </div>
