--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -127,7 +127,6 @@ a:focus {
 }
 .style_prevu_kit:hover
 {
-    box-shadow: 0px 0px 150px #000000;
     z-index: 2;
     -webkit-transition: all 200ms ease-in;
     -webkit-transform: scale(1.5);
@@ -140,5 +139,6 @@ a:focus {
 }
 a{
   text-decoration: none !important;
+  background-color: transparent;
 }
 
