Fixed UI and typo's

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= render :partial => "layouts/common/header" %>
+  <%= render :partial => "layouts/common/header" %><br>
   <div id="div_flash_message" class="container" >
   	<%= render :partial=>"/layouts/common/flash_messages" -%>
   </div>
