--- a/app/views/layouts/common/_flash_messages.html.erb
+++ b/app/views/layouts/common/_flash_messages.html.erb
@@ -17,7 +17,7 @@
 
 <% unless flash_message.blank? %>
 <div id = "flash">
-  <div class="<%= style_classes %> alert <%= cls_name %> fade in mb-10" data-alert="alert">
+  <div class="<%= style_classes %> alert <%= cls_name %> fade in mb-10" data-alert="alert" style="margin-top: 100px;margin-bottom: -100px;">
     <a class="close" data-dismiss='alert' href="#">×</a>
     <p><%= flash_message %></p>
   </div>
