--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -1,37 +1,38 @@
-<div id="content" class="container body-img fix-width-header">
-<h2 class='heading-fix'> List of School</h2>
-<div>
-  <a href="<%= new_school_path %>" class='btn btn-normal create-btn-position'>Create School</a>
-</div>
+<div id="content" class="container body-img" style="margin-top: 150px;">
+  <h2 class='heading-fix'> List of School</h2>
+  <div>
+    <%= link_to "Create School", new_school_path, :class=>"btn btn-primary", :style=>"float :right;" %>
+  </div>
 
-<div class="table-responsive list-view div-documents-list-section fix-position-table">
-  <table class="table table-striped table-hover">
-    <thead>
-      <tr>
-        <!-- <th class="entry-num">Entry Number</th> -->
-        <th class="date">Name</th>
-        <th class="name">Address</th>
-        <th class="document-title" style="padding-right:40px;">Telephone</th>
-        <th class="status">City</th>
-        <th class="share">Country</th>
-        <th class="share">Region</th>
-        <th class="action">Action</th>
-      </tr>
-    </thead>
-    <tbody class="table-body-background change-font">
-      <% @schools.each do |school| %>
+  <div class="table-responsive list-view div-documents-list-section fix-position-table">
+    <table class="table table-striped table-hover">
+      <thead>
         <tr>
-          <td><%= school.name %></td>
-          <td><%= school.address %></td>
-          <td><%= school.telephone %></td>
-          <td><%= school.city %></td>
-          <td><%= school.country %></td>
-          <td><%= school.region %></td>
-          <td><%= link_to 'Delete', school_path(school), method: :delete, data:{confirm: 'Are you want to delete School'}, :class=> "" %> | <%= link_to 'Edit', edit_school_path(school), :class=> '' %> | <%= link_to 'Show', school_path(school), :class=> '' %>
-          </td>
+          <!-- <th class="entry-num">Entry Number</th> -->
+          <th>Name</th>
+          <th>Email</th>
+          <th>Telephone</th>
+          <th>Address</th>
+          <th>City</th>
+          <th>Region</th>
+          <th>Country</th>
+          <th>Action</th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+      </thead>
+      <tbody class="table-body-background change-font">
+        <% @schools.each do |school| %>
+          <tr>
+            <td><%= school.name %></td>
+            <td><%= school.email %></td>
+            <td><%= school.telephone %></td>
+            <td><%= school.address %></td>
+            <td><%= school.city %></td>
+            <td><%= school.region %></td>
+            <td><%= school.country %></td>
+            <td><%= link_to 'Delete', school_path(school, :url=>"school_url"), method: :delete, data:{confirm: 'Are you want to delete school?'}, :class=> "" %> | <%= link_to 'Edit', edit_school_path(school), :class=> '' %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
