--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,7 +56,7 @@
     </a>
   </div>
   <div class="col-md-2 text-center">
-    <a href="" class="style_prevu_kit"><i class="fa fa-cogs fa-5x" aria-hidden="true"></i>
+    <a href="/settings" class="style_prevu_kit"><i class="fa fa-cogs fa-5x" aria-hidden="true"></i>
       <br/>
       Settings
     </a>
