Added exams and home page design

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,63 @@
-<div class="row home-page-spacing">
+<div class="container" style="margin-top: 150px;">
+  <div class="row">
+    <div class="col-sm-3">
+      <a href="" class="style_prevu_kit"><i class="fa fa-user-plus fa-5x" aria-hidden="true"></i>
+        <br>
+        Admission
+      </a>
+    </div>
+    <div class="col-sm-3">
+      <a href="" class="style_prevu_kit"><i class="fa fa-users fa-5x" aria-hidden="true"></i>
+        <br>
+        Student Details
+      </a>
+    </div>
+    <div class="col-sm-3">
+      <a href="" class="style_prevu_kit"><i class="fa fa-files-o fa-5x" aria-hidden="true"></i>
+        <br>
+        Manage User
+      </a>
+    </div>
+    <div class="col-sm-3">
+      <a href="" class="style_prevu_kit"><i class="fa fa-newspaper-o fa-5x" aria-hidden="true"></i>
+        <br>
+        Manage News
+      </a>
+    </div>
+  </div>
+  <br>
+  <br>
+  <div class="row">
+    <div class="col-sm-3">
+      <a href="/settings" class="style_prevu_kit"><i class="fa fa-cogs fa-5x" aria-hidden="true"></i>
+        <br>
+        Settings
+      </a>
+    </div>
+    <div class="col-sm-3">
+      <a href="" class="style_prevu_kit"><i class="fa fa-cutlery fa-5x" aria-hidden="true"></i>
+        <br>
+        Canteen
+      </a>
+    </div>
+    <div class="col-sm-3">
+      <a href="" class="style_prevu_kit"><i class="fa fa-user fa-5x" aria-hidden="true"></i>
+        <br>
+        Human Resource
+      </a>
+    </div>
+    <div class="col-sm-3">
+       <a href="" class="style_prevu_kit"><i class="fa fa-calendar fa-5x" aria-hidden="true"></i>
+      <br/>
+      Time Table
+    </a>
+    </div>
+  </div>
+  
+</div>
+
+
+<!-- <div class="row home-page-spacing">
   <div class="col-md-12">
   </div>
 </div>
@@ -75,4 +134,4 @@
   </div>
   <div class="col-md-1">
   </div>
-</div>
+</div> -->
