--- a/app/views/exams/edit.html.erb
+++ b/app/views/exams/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="well" style="width: 100%;margin-top: 100px;height: auto;">
     <h3 class='align-center-text'>Create Grading Level</h3>
     <br>
-    <%= form_for :exam, url: exam_path, :method=> :get do |f| %>
+    <%= form_for :exam, url: exam_path, :method=> :put do |f| %>
       <% if @exam.errors.any? %>
         <div id="error_explanation">
           <h4><%= pluralize(@exam.errors.count, "error") %> prohibited this user from being saved:</h4>
