Added Manage users tab in the application

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,9 +13,9 @@
       </a>
     </div>
     <div class="col-sm-3">
-      <a href="" class="style_prevu_kit"><i class="fa fa-files-o fa-5x" aria-hidden="true"></i>
+      <a href="/admin_users" class="style_prevu_kit"><i class="fa fa-files-o fa-5x" aria-hidden="true"></i>
         <br>
-        Manage User
+        Manage Users
       </a>
     </div>
     <div class="col-sm-3">
