--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,15 +7,15 @@
       </a>
     </div>
     <div class="col-sm-3">
-      <a href="" class="style_prevu_kit"><i class="fa fa-users fa-5x" aria-hidden="true"></i>
+      <a href="/students" class="style_prevu_kit"><i class="fa fa-users fa-5x" aria-hidden="true"></i>
         <br>
-        Student Details
+        Manage Students
       </a>
     </div>
     <div class="col-sm-3">
-      <a href="/admin_users" class="style_prevu_kit"><i class="fa fa-files-o fa-5x" aria-hidden="true"></i>
+      <a href="/employees" class="style_prevu_kit"><i class="fa fa-files-o fa-5x" aria-hidden="true"></i>
         <br>
-        Manage Users
+        Manage Employees
       </a>
     </div>
     <div class="col-sm-3">
