--- a/app/views/layouts/common/_header.html.erb
+++ b/app/views/layouts/common/_header.html.erb
@@ -12,10 +12,10 @@
   </div>
   <nav role="navigation" class="collapse navbar-collapse bs-navbar-collapse">
     <ul class="nav navbar-nav navbar-left">
-      <li class="active"><a href="#" >Dashbaord</a></li>
-      <li><a href="#">Settings</a></li>
-      <li><a href="#">Students</a></li>
-      <li><a href="#">More</a></li>
+      <li class="active"><a href="/home/index" >Dashbaord</a></li>
+      <li><a href="/settings">Settings</a></li>
+      <li><a href="/students">Students</a></li>
+      <li><a href="/employees">More</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
