--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,13 +1,13 @@
 <div class="container padding-issue-in-new">
   <div class="well" style="width: 100%;margin-top: 100px;height: auto;">
-    <h3 class='align-center-text'>Create User</h3>
+    <h3 class='align-center-text'>Edit Student</h3>
     <br>
-    <%= form_for :admin_user, url: admin_users_path do |f| %>
-      <% if @user.errors.any? %>
+    <%= form_for @student, url: student_path, :method=> :put do |f| %>
+      <% if @student.errors.any? %>
         <div id="error_explanation">
-          <h4><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h4>
+          <h4><%= pluralize(@student.errors.count, "error") %> prohibited this user from being saved:</h4>
           <ul>
-            <% @user.errors.full_messages.each do |msg| %>
+            <% @student.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
             <% end %>
           </ul>
@@ -51,35 +51,6 @@
             </div>
           </div>
           <br>
-          <div class="row">
-            <div class="form-group">
-              <div class="col-sm-12">
-                <% type=['Student', 'Employee'] %>
-                <%= f.label :user_type %>
-                <%= f.select(:user_type, options_for_select(type, :selected => params[:status]), {},{:class => "form-control"}) %>
-              </div>
-            </div>
-          </div>
-          <br>
-          <div class="row">
-            <div class="form-group">
-              <div class="col-sm-12">
-                <%= f.label :password %>
-                <%= f.password_field :password, class: 'form-control' %>
-              </div>
-            </div>
-          </div>
-          <br>
-          <div class="row">
-            <div class="form-group">
-              <div class="col-sm-12">
-                <%= f.label :password_confirmation %>
-                <%= f.password_field :password_confirmation, class: 'form-control' %>
-              </div>
-            </div>
-          </div>
-          <br>
-         
           <div class="container-fluid">
             <div class="row" style="margin-left: 80px;">
               <div class="col-xs-6">
@@ -89,7 +60,7 @@
               </div>
               <div class="col-xs-6">
                 <div class="form-group">
-                  <%= link_to "Cancel", admin_users_path, :class=>"btn btn-danger" %>
+                  <%= link_to "Cancel", students_path, :class=>"btn btn-danger" %>
                 </div>
               </div>
             </div>
