--- a/app/views/subjects/assign_subject.html.erb
+++ b/app/views/subjects/assign_subject.html.erb
@@ -1,6 +1,6 @@
 <div id="content" class="container body-img" style="margin-top: 150px;">
-  <h2 class='heading-fix'> Assign Subject to Employ</h2><br>
-  <h4>Subject Name : <%= @subject.name %></h4>
+  <h4 class='heading-fix'> Assign Subject to Employe</h4><br>
+  <h6>Subject Name : <%= @subject.name %></h6>
   <%= form_for :subject, url: subject_path, method: :put do |f| %>
   <div class="form-group">
     <div class="col-sm-6">
