--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container padding-issue-in-new">
   <div class="well" style="width: 100%;margin-top: 100px;height: auto;">
-    <h3 class='align-center-text'>Create Subject</h3>
+    <h3 class='align-center-text'>Add Subject</h3>
     <br>
     <%= form_for :subject, url: subjects_path do |f| %>
       <% if @subject.errors.any? %>
