--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,7 +1,7 @@
 <div id="content" class="container body-img" style="margin-top: 150px;">
   <h2 class='heading-fix'> List of Students</h2>
   <div>
-    <%= link_to "Create Student", new_student_path, :class=>"btn btn-primary", :style=>"float :right;" %>
+    <%= link_to "Add Student", new_student_path, :class=>"btn btn-primary", :style=>"float :right;" %>
   </div>
 
   <div class="table-responsive list-view div-documents-list-section fix-position-table">
