--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container padding-issue-in-new">
   <div class="well" style="width: 100%;margin-top: 100px;height: auto;">
-    <h3 class='align-center-text'>Create Student</h3>
+    <h3 class='align-center-text'>Add Student</h3>
     <br>
     <%= form_for :student, url: students_path do |f| %>
       <% if @student.errors.any? %>
