--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,7 +1,7 @@
 <div id="content" class="container body-img" style="margin-top: 150px;">
-  <h2 class='heading-fix'> List of Subjects</h2>
+  <h3 class='heading-fix'> List of Subjects</h3>
   <div>
-    <%= link_to "Create Subject", new_subject_path, :class=>"btn btn-primary", :style=>"float :right;" %>
+    <%= link_to "Add Subject", new_subject_path, :class=>"btn btn-primary", :style=>"float :right;" %>
   </div>
 
   <div class="table-responsive list-view div-documents-list-section fix-position-table">
@@ -12,6 +12,7 @@
           <th>Name</th>
           <th>Type</th>
           <th>Batch</th>
+          <th>Assigned To</th>
           <th>Action</th>
         </tr>
       </thead>
@@ -21,6 +22,13 @@
             <td><%= subject.name %></td>
             <td><%= subject.subject_type %></td>
             <td><%= subject.batch.name %></td>
+            <td>
+              <% if subject.user.present? %>
+                <%= subject.user.user_name %>
+              <% else %>
+                not assigned
+              <% end %>
+            </td>
             <td><%= link_to 'Delete', subject_path(subject, :url=>"subject_url"), method: :delete, data:{confirm: 'Are you want to delete subject?'}, :class=> "" %> | <%= link_to 'Edit', edit_subject_path(subject), :class=> '' %> | <%= link_to 'Assign', assign_subject_path(subject), :class=> '' %></td>
           </tr>
         <% end %>
