--- a/app/views/grading_levels/index.html.erb
+++ b/app/views/grading_levels/index.html.erb
@@ -5,7 +5,7 @@
   </div>
 
   <div class="table-responsive list-view div-documents-list-section fix-position-table">
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover" id="grading_levels_table">
       <thead>
         <tr>
         <!-- <th class="entry-num">Entry Number</th> -->
