--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,9 +19,9 @@
       </a>
     </div>
     <div class="col-sm-3">
-      <a href="" class="style_prevu_kit"><i class="fa fa-newspaper-o fa-5x" aria-hidden="true"></i>
+      <a href="/reports" class="style_prevu_kit"><i class="fa fa-newspaper-o fa-5x" aria-hidden="true"></i>
         <br>
-        Manage News
+        Manage Reports
       </a>
     </div>
   </div>
