--- a/app/views/batches/new.html.erb
+++ b/app/views/batches/new.html.erb
@@ -52,6 +52,15 @@
             </div>
           </div>
           <br>
+          <div class="row">
+            <div class="form-group">
+              <div class="col-sm-12">
+                <%= f.label :report_type %>
+                <%= f.collection_select(:report_id, ReportType.all.select(:id, :name), :id, :name, {}, :class =>"form-control") %>
+              </div>
+            </div>
+          </div>
+          <br>
           <div class="container-fluid">
             <div class="row" style="margin-left: 80px;">
               <div class="col-xs-6">
