--- a/app/views/exams/edit.html.erb
+++ b/app/views/exams/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container padding-issue-in-new">
   <div class="well" style="width: 100%;margin-top: 100px;height: auto;">
-    <h3 class='align-center-text'>Create Grading Level</h3>
+    <h3 class='align-center-text'>Edit Exam</h3>
     <br>
     <%= form_for :exam, url: exam_path, :method=> :put do |f| %>
       <% if @exam.errors.any? %>
