--- a/app/views/home/settings.html.erb
+++ b/app/views/home/settings.html.erb
@@ -10,15 +10,15 @@
 
 		<div class="col-sm-4">
 			<div class="cards">
-				<%= link_to 'Manage Terms', terms_semister_index_path, :style=>"font-weight: bold;" %>
-				<p style="color: #A9A9A9;">Where you can manage terms information</p>
-			</div>
-		</div>
-
-		<div class="col-sm-4">
-			<div class="cards">
 				<%= link_to 'Manage Batch', batches_path, :style=>"font-weight: bold;" %>
 				<p style="color: #A9A9A9;">Where you can manage batches information</p>
+			</div>
+		</div>
+		
+		<div class="col-sm-4">
+			<div class="cards">
+				<%= link_to 'Manage Terms', terms_path, :style=>"font-weight: bold;" %>
+				<p style="color: #A9A9A9;">Where you can manage terms information</p>
 			</div>
 		</div>
 
