--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -1,5 +1,5 @@
 <div id="content" class="container body-img" style="margin-top: 150px;">
-  <h3 class='heading-fix'> List of Exams</h3>
+  <h3 class='heading-fix'> List of Exam</h3>
   <div>
     <%= link_to "Create Exam", new_exam_path, :class=>"btn btn-primary", :style=>"float :right;" %>
   </div>
