--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -28,8 +28,9 @@
           <div class="row">
             <div class="form-group">
               <div class="col-sm-12">
-                <%= f.label :type %>
-                <%= f.select :subject_type, ['Core', 'Elective'], class: 'form-control' %>
+                <% type=['Core', 'Elective'] %>
+                <%= f.label :subject_type %><br />
+                <%= f.select(:subject_type, options_for_select(type, :selected => params[:status]), {},{:class => "form-control"}) %>
               </div>
             </div>
           </div>
