--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container" style="margin-top: 150px;">
   <div class="row">
     <div class="col-sm-3">
-      <a href="" class="style_prevu_kit"><i class="fa fa-user-plus fa-5x" aria-hidden="true"></i>
+      <a href="/admissions" class="style_prevu_kit"><i class="fa fa-user-plus fa-5x" aria-hidden="true"></i>
         <br>
         Admission
       </a>
